# creditPath

./: .gitignore  .replit  COPY_PASTE_SETUP.md  FINAL_SUMMARY.md  LIVE_SERVER_FIXED.md  LIVE_SERVER_GUIDE.md  PROJECT_DEMO.md  QUICK_START.md  README.md  README_LIVE_SERVER.md  RUNNING.md  SETUP_COMPLETE.md  START_HERE.md  VISUAL_SUMMARY.md  pyproject.toml  replit.md  run_dev.ps1  run_server.py  test_api.py
attached_assets/: Pasted--1-Add-Authentication-Login-Signup-Implement-a-simple-authentication-system-using-FastAPI--1763441837416_1763441837417.txt  Pasted-You-are-now-the-developer-for-my-full-end-to-end-project-CreditPathAI-Create-the-entire-proj-1763287593351_1763287593353.txt
backend/: main.py
backend/api/: batch_routes.py  routes.py  schema.py
backend/auth/: jwt_handler.py  routes.py
backend/database/: users.py
backend/model/: model.pkl  model_loader.py  train_model.py
backend/utils/: logger.py  recommendation.py
frontend/: auth.js  config.js  dashboard.html  dashboard.js  index.html  old_form.html  old_style.css  script.js  style.css  ui.js
tools/: e2e_test.py
