[project]
name = "creditpathai"
version = "1.0.0"
description = "CreditPathAI - Intelligent Loan Default Risk Assessment System"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
